[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odte-radar-prototype"
version = "0.1.0"
description = "0DTE radar prototype for Moomoo quote collection and Plotly display."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "dash",
    "duckdb",
    "moomoo-api",
    "pandas",
    "plotly",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data*"]
